--- a/Latex/main.tex
+++ b/Latex/main.tex
@@ -4,16 +4,17 @@
 \usepackage{packages}
 \usepackage{pdfpages}
 \usepackage{pdflscape}
-\usepackage{graphicx}
 \usepackage{adjustbox}
 \usepackage{longtable}
 \usepackage{ragged2e}
 \usepackage{tabularx}
 \usepackage{booktabs}
-\usepackage{enumitem}
+\setlength{\headheight}{14pt}   % regola l'altezza della testata
+\addtolength{\topmargin}{-1.6pt} % opzionale
 
 
 \begin{document}
+
 
 % FRONTISPIECE %
 \include{frontmatter/frontispiece}
