--- a/Latex/packages.sty
+++ b/Latex/packages.sty
@@ -245,3 +245,6 @@ bindingoffset=15mm,marginpar=1.5cm,reversemp]{geometry}
 % To provide support for the manipulation and reference of small or ‘sub’ figures
 % and tables within a single figure or table environment
 \usepackage{subfig}
+
+
+\usepackage{tcolorbox}
