--- a/Latex/main.tex
+++ b/Latex/main.tex
@@ -13,7 +13,7 @@
 \usepackage{float} % nel preambolo
 \setlength{\headheight}{14pt}   % regola l'altezza della testata
 \addtolength{\topmargin}{-1.6pt} % opzionale
-\usepackage{my_listings} % pacchetto personalizzato per il linguaggio PRISM negli snippet
+\usepackage{prism} % pacchetto personalizzato per il linguaggio PRISM negli snippet
 
 \setcounter{tocdepth}{3} %numerazione per indice
 \setcounter{secnumdepth}{3} %grado di sottosezioni con numerazioni nei capitoli
