--- a/Latex/main.tex
+++ b/Latex/main.tex
@@ -2,6 +2,7 @@
 
 \usepackage{array}  % permette colonne p{} e comandi avanzati nelle tabelle
 \usepackage{packages}
+\usepackage{placeins}
 \usepackage{pdfpages}
 \usepackage{pdflscape}
 \usepackage{adjustbox}
